# erpnext-mexico

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  setup.sh
erpnext_mexico/: .gitignore  README.md  pyproject.toml
erpnext_mexico/erpnext_mexico/: hooks.py  install.py  modules.txt  uninstall.py
erpnext_mexico/erpnext_mexico/cfdi/: carta_porte_builder.py  cfdi_helpers.py  nomina_builder.py  pac_dispatcher.py  pac_interface.py  pac_utils.py  payment_builder.py  tasks.py  xml_builder.py
erpnext_mexico/erpnext_mexico/diot/: diot_generator.py  diot_report.py
erpnext_mexico/erpnext_mexico/electronic_accounting/: __init__.py  balanza_xml.py  catalog_xml.py  polizas_xml.py
erpnext_mexico/erpnext_mexico/sat_catalogs/: catalog_importer.py  import_bank_catalog.py
erpnext_mexico/erpnext_mexico/seed/: __init__.py  check_errors.py  constants.py  fix_translations.py  master_data.py  restamp.py  run.py  stress_test.py  transactions.py  verify.py
erpnext_mexico/erpnext_mexico/setup/: tax_templates.py
erpnext_mexico/erpnext_mexico/templates/: cfdi_print.html
erpnext_mexico/erpnext_mexico/tests/: e2e_builders.py  e2e_diot.py  e2e_electronic_accounting.py  e2e_fiscal_lifecycle.py  e2e_smoke_test.py  e2e_stamp_brutecp.py  e2e_stamp_debug_xml.py  e2e_stamp_diff_receptor.py  e2e_stamp_final.py  e2e_stamp_v5.py  e2e_stamp_v6.py  e2e_stamp_v7.py  e2e_stamp_via_pac.py  e2e_t2_t3_t4.py  fix_fiscal_data.py  fix_settings.py  load_all_test_csd.py  setup_e2e_data.py  setup_minimal_catalogs.py  setup_pac.py  (+11 more)
(+122 files in other folders)
